---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2020-10-19
  Changes:
    - Fixed issue with upgrade planner not upgrading modded items
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2020-10-17
  Changes:
    - Made chests slightly cheaper
    - Adjusted Menu layout
    - Added Higher Level Offshore Pumps
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2020-08-28
  Changes:
    - Updated for Factorio v1
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2020-06-19
  Changes:
    - Intial creation of mod in v18