@@ -46,6 +46,10 @@ large-logistic-container-buffer=Large Buffer Chest
 large-logistic-container-requester=Large Requester Chest
 roboport-mk1=Roboport Mk1
 roboport-mk2=Roboport Mk2
+transport-belt-mk1-loader=MK1 Compact Loader
+transport-belt-mk2-loader=MK2 Compact Loader
+transport-belt-mk1-beltbox=MK1 Stacking Machine
+transport-belt-mk2-beltbox=MK2 Stacking Machine
 
 [technology-name]
 high-teir-logistics-mk1=Logistics Mk1
