@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.3
-Date: ????
+Date: 2020-11-09
   Changes:
+    - Fixed up Beltbox and Loader Recipes
+    - Fixed up Local for above items
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 2020-10-19
